ChangeLog for gtk-tool

12/01/1999 - Pele
	* Added some defines for U-MICH compatibility
	* Updated to the latest Gtk-- API (in Gtk-- CVS tree)
	* Minor fixes due to the new and cleaner Gtk-- API
	* A new server can be added by entering a hostname into the
	"url" field at the top and clicking on "Query Server" button
	(note that one server still has to be supplied on the command line -
	I'll try and fix this tomorrow...to do with ldap_get_opt)
	* Somewhat "smarter" Makefile - can someone please look into integrating
	gtk-tool into the openldap autoconf stuff?

09/12/1998 - Pele
	* Display of all ldap options in their proper widgets (sliders for 
	timeout, radio buttons for booleans etc.) when server selected
	* Code cleanups
	* Misc fixes

03/12/1998 - Pele
	* Added support for multiple servers (via multiple -s options)
	* More testing
	* Started experimenting with status bar for display of various info
	* Got rid of many warning and error messages generate by gtk
	* Added a new icon for objectclass=alias;
	* Display of some ldap options aquired with ldap_get_option when
	server selected.
	* Traversing set to only 1 subtree (then 1 by 1);
	* Started experimenting with a progress bar for traversal
	(so users don't get bored while waiting for subtrees to be aquired and
	constructed)

02/12/1998 - Pele
	* Added Gtk_LdapTree class
	* Added utils (with debug only)
	* "Smart" traversing of ldap tree (only 2-deep, then add 2 subtrees as
	the tree gets expanded)
	* Lots of updates and bug-fixes

29/11/1998 - Pele
	* Added Gtk_LdapServer class
	* Started using cn=config, ldap_get_option (not sure about get_option
	though, cn=config looks much nicer for the future-proofing)
	* Can traverse, display and serve two (or possibly/hopefully) more
	databases on the local machine - remote machines also possible - 
	need to use "-s hostname"
	* The program needs the "-s" switch! Without it it won't run (temporary
	"feature")

28/11/1998 - Pele